--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="formControl">
                     <div class="phone-email">
                         <div class="phone">
-                            <label>Phone:</label><br>
+                            <label>Phone No:</label><br>
                             <input type="text" class="phone" id="phone" maxlength="10"><br>
                             <small>Error Message</small>
                         </div>
