--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="code">
                             <label>Zip Code:</label><br>
-                            <input type="text" class="code1" id="codeno" maxlength="6">
+                            <input type="text" class="code1" id="codeno" maxlength="6"><br>
                             <small>Error Message</small>
                         </div>
                     </div>
